[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Sprites/Light/spot.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Player/Dino's/sheets/DinoSprites - vita.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Player Icons/Player 1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UI/HealthBar/HealthBar.tscn" type="PackedScene" id=6]

[sub_resource type="Gradient" id=25]
offsets = PoolRealArray( 0, 0.455959, 1 )
colors = PoolColorArray( 0.113281, 0.90625, 0.86908, 1, 0.12549, 0.964706, 0.905699, 1, 1, 1, 1, 0 )

[sub_resource type="CapsuleShape2D" id=31]
radius = 10.9333

[sub_resource type="Gradient" id=27]
offsets = PoolRealArray( 0.562162, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 16 )

[sub_resource type="Animation" id=28]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Particles Front/Attack:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.101625 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Climb"
length = 0.7

[sub_resource type="Animation" id=20]
resource_name = "Death"
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 15, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotatable/Particles Back/Deathparticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotatable/Particles Front/Deathparticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
resource_name = "DoorIn"

[sub_resource type="Animation" id=3]
resource_name = "Fall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 7, 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=29]
resource_name = "TakeDamage"
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 15, 14 ]
}

[sub_resource type="Animation" id=26]
resource_name = "Wall Slide"

[node name="player_" type="KinematicBody2D"]
modulate = Color( 1.25, 1, 1.5, 1 )
scale = Vector2( 3, 3 )
collision_mask = 7
script = ExtResource( 2 )
ACCELERATION = 50000
MAX_SPEED = 50000
LIMIT_SPEED_Y = 30000
JUMP_BUFFER_TIME = 5
WALL_JUMP_AMOUNT = 200
GRAVITY = 2500
DASH_SPEED = 45000
DashAbility = true
DoubleJump = true
WallJumpAbility = true
Knockback = 10
attack_cooldown_time = 250
attack_damage = 1

[node name="PlayerIcon" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 4 )

[node name="Rotatable" type="Node2D" parent="."]

[node name="Particles Back" type="Node2D" parent="Rotatable"]

[node name="Deathparticles" type="CPUParticles2D" parent="Rotatable/Particles Back"]
emitting = false
amount = 50
one_shot = true
speed_scale = 2.0
explosiveness = 0.2
lifetime_randomness = 0.35
emission_shape = 2
emission_rect_extents = Vector2( 20, 20 )
gravity = Vector2( 0, 0 )
radial_accel = 100.0
scale_amount = 3.0
color_ramp = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="Rotatable"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 24
frame = 14

[node name="RayCast2D" type="RayCast2D" parent="Rotatable"]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2
collide_with_areas = true

[node name="Emission" type="Light2D" parent="Rotatable"]
texture = ExtResource( 1 )
texture_scale = 4.0
color = Color( 1, 0.952941, 0.701961, 1 )
energy = 0.4
shadow_enabled = true
shadow_gradient_length = 1.3
shadow_filter = 5
shadow_filter_smooth = 11.1

[node name="Combat" type="Node2D" parent="Rotatable"]

[node name="Area2D" type="Area2D" parent="Rotatable/Combat"]
collision_layer = 16
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotatable/Combat/Area2D"]
scale = Vector2( 2.5, 1.25 )
shape = SubResource( 31 )

[node name="AttackDetection" type="RayCast2D" parent="Rotatable/Combat"]
position = Vector2( 33.3333, 0 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 16
collide_with_areas = true

[node name="Particles Front" type="Node2D" parent="Rotatable"]

[node name="Deathparticles" type="CPUParticles2D" parent="Rotatable/Particles Front"]
emitting = false
amount = 50
one_shot = true
speed_scale = 2.0
explosiveness = 0.2
lifetime_randomness = 0.35
emission_shape = 2
emission_rect_extents = Vector2( 20, 20 )
gravity = Vector2( 0, 0 )
radial_accel = 100.0
scale_amount = 3.0
color_ramp = SubResource( 25 )

[node name="Attack" type="CPUParticles2D" parent="Rotatable/Particles Front"]
position = Vector2( 28, 0 )
emitting = false
amount = 50
lifetime = 0.25
one_shot = true
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
scale_amount = 1.5
color_ramp = SubResource( 27 )

[node name="Colission" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 28 )
anims/Climb = SubResource( 2 )
anims/Death = SubResource( 20 )
anims/DoorIn = SubResource( 19 )
anims/Fall = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/Run = SubResource( 6 )
anims/TakeDamage = SubResource( 29 )
"anims/Wall Slide" = SubResource( 26 )

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
margin_left = -41.3333
margin_top = 24.0
margin_right = 128.667
margin_bottom = 58.0
yaxis = 20

[node name="Timers" type="Node" parent="."]

[node name="AttackCooldown" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="ModCooldown" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="DashCooldown" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="RespawnTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="PhaseTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[connection signal="area_entered" from="Rotatable/Combat/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="health_depleted" from="HealthBar" to="." method="_on_HealthBar_health_depleted"]
[connection signal="timeout" from="Timers/ModCooldown" to="." method="_on_ModCooldown_timeout"]
[connection signal="timeout" from="Timers/DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="Timers/RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="Timers/PhaseTimer" to="." method="_on_PhaseTimer_timeout"]
